--- a/PokeApi/src/index.css
+++ b/PokeApi/src/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.btn{
+/* .btn{
     background-color: hsl(200, 100%, 50%);
     color: #fff;
     font-size: 2em;
@@ -12,4 +12,23 @@
     border-radius: 12px;
     border: none;
     cursor: pointer;
+} */
+
+.welcome-msg{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 2em;
+    background-color: rgb(2, 253, 253);
+    color: #fff;
+    text-align: center;
+    padding: .5em;
+    border-radius: 8px;
+}
+.login-prompt{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 2em;
+    background-color: rgb(255, 0, 0);
+    color: #000000;
+    text-align: center;
+    padding: .5em;
+    border-radius: 8px;
 }
