--- a/PokeApi/src/index.css
+++ b/PokeApi/src/index.css
@@ -14,7 +14,7 @@
     cursor: pointer;
 } */
 
-.welcome-msg{
+/* .welcome-msg{
     font-family: 'Times New Roman', Times, serif;
     font-size: 2em;
     background-color: rgb(2, 253, 253);
@@ -31,4 +31,4 @@
     text-align: center;
     padding: .5em;
     border-radius: 8px;
-}
+} */
