--- a/PokeApi/src/index.css
+++ b/PokeApi/src/index.css
@@ -4,12 +4,12 @@
     box-sizing: border-box;
 }
 
-.btn{
-    background-color: hsl(200, 100%, 50%);
-    color: #fff;
+.student{
+    font-family: 'Times New Roman', Times, serif;
     font-size: 2em;
-    padding: 10px, 20px;
-    border-radius: 12px;
-    border: none;
-    cursor: pointer;
+    padding: 12px;
+    border: 2px solid hsla(0, 0%, 50%, 0.8);
+}
+.student p{
+    margin: 0;
 }
