learing to make a counter with use state

--- a/PokeApi/src/index.css
+++ b/PokeApi/src/index.css
@@ -15,7 +15,12 @@
 } */
 
 .btn1{
-    font-size: 2em;
+    font-size: 1em;
     border-radius: 8px;
+    margin: 12px;
+    padding: .5em;
+    outline: none;
+    cursor: pointer;
+
     
 }
