--- a/PokeApi/src/index.css
+++ b/PokeApi/src/index.css
@@ -14,7 +14,7 @@
     margin: 0;
 } */
 
-.btn1{
+/* .btn1{
     font-size: 1em;
     border-radius: 8px;
     margin: 12px;
@@ -23,4 +23,18 @@
     cursor: pointer;
 
     
+} */
+/* .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
+span{
+   font-size: 3em;
+   
+}
+button{
+    font-size: 2em;
+} */
+
