still working on the fetch

--- a/Poke/src/header.css
+++ b/Poke/src/header.css
@@ -14,13 +14,17 @@
     font-size: 8em;
 }
 
+form{
+    gap: 1em;
+}
 input{
-    width:20%; /* Limiting the width to 60% */
-    max-width: 40%; /* Setting width to 100% to allow it to expand */
+    width: 52%; 
+    max-width: 60%; 
     height: 3em;
 }
 
 button{
+    margin-top: 2em;
     font-size: 1em;
     padding: .5em;
     border-radius: 4px;
