--- a/Poke/src/header.css
+++ b/Poke/src/header.css
@@ -1,48 +1,42 @@
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
 .container{
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 40vh;
-    gap: 1em;
+    gap: 2em;
+    height: 50vh;
 }
-
-.heading-text{
-    font-size: 8em;
-}
-
-form{
-    gap: 1em;
+h1{
+    font-size: 4em;
 }
 input{
-    width: 52%; 
-    max-width: 60%; 
-    height: 3em;
-}
-
-button{
-    margin-top: 2em;
-    font-size: 1em;
-    padding: .5em;
     border-radius: 4px;
-    border: #ff0000 2px solid;
-    background: #ff0000;
+    padding: 1em;
+    align-items: center;
+    width: 80%;
+    max-width: 90%;
+    margin:1.5em 0 0 1.9em ;
+
+}
+input[placeholder]{
+    padding: .5em;
+}
+button{
+    margin: 2em 0 0 5em;
+    border: red 2px solid;
+    border-radius: 8px;
+    background-color: red;
+    padding: .5em;
+    font-size: 1em;
     color: #fff;
-    cursor: pointer;
 }
 
 button:hover{
-    background-color: #f50f0f;
+    
 }
-/*  */
-
-input[placeholder] {
-    font-size: 1em;
-    padding: .3em;
-    padding-left: .5em;
-}
-
-
