--- a/Poke/src/input.css
+++ b/Poke/src/input.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+/* *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+} */
+
+body{
+    background-color: aqua;
 }
