stioll trying to get this to work

--- a/srcc/output.css
+++ b/srcc/output.css
@@ -1,5 +1,5 @@
-h2{
-  color: purple;
+body{
+  background-color: red;
 }
 
 /* https://stackoverflow.com/questions/48248832/stylesheet-not-loaded-because-of-mime-type */
